--- a/presentation-android-mvp/src/main/res/layout/business_list_item.xml
+++ b/presentation-android-mvp/src/main/res/layout/business_list_item.xml
@@ -15,12 +15,14 @@
   ~ limitations under the License.
   -->
 
-<resources>
-    <string name="app_name">Business Search MVP</string>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-    <!-- literals -->
-    <string name="click_to_retry">Click to retry</string>
+    <TextView
+        android:id="@+id/name"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent" />
 
-    <!-- errors -->
-    <string name="error_generic">Something went wrong</string>
-</resources>
+</LinearLayout>
