--- a/presentation-android-mvp/src/main/res/layout/business_list_fragment.xml
+++ b/presentation-android-mvp/src/main/res/layout/business_list_fragment.xml
@@ -14,21 +14,23 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.RecyclerView
+    <android.support.v7.widget.RecyclerView xmlns:recyclerview="http://schemas.android.com/apk/res-auto"
         android:id="@+id/business_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="vertical" />
+        android:orientation="vertical"
+        android:scrollbars="vertical"
+        recyclerview:layoutManager="android.support.v7.widget.LinearLayoutManager" />
 
     <ProgressBar
         android:id="@id/loading_indicator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_gravity="center"
         android:indeterminate="true" />
 
     <TextView
@@ -36,6 +38,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:text="@string/click_to_retry" />
-
-</RelativeLayout>
+        android:text="@string/click_to_retry"
+        android:visibility="invisible" />
+</FrameLayout>
