Completed initial business list implementation (incomplete)

--- a/presentation-android-mvp/src/main/res/layout/business_list_activity.xml
+++ b/presentation-android-mvp/src/main/res/layout/business_list_activity.xml
@@ -17,6 +17,18 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
+    <FrameLayout
+        android:id="@+id/options_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <FrameLayout
+        android:id="@+id/content_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@id/options_container" />
 </RelativeLayout>
