Refactored use cases and business ui packaging

--- a/presentation-android-mvp/src/main/res/values/ids.xml
+++ b/presentation-android-mvp/src/main/res/values/ids.xml
@@ -14,6 +14,7 @@
   ~ limitations under the License.
   -->
 <resources>
+    <item name="content_pane" type="id" />
     <item name="loading_indicator" type="id" />
     <item name="retry_button" type="id" />
 </resources>
