--- a/presentation-android-mvp/src/main/res/layout/business_list_fragment.xml
+++ b/presentation-android-mvp/src/main/res/layout/business_list_fragment.xml
@@ -19,7 +19,7 @@
     android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView xmlns:recyclerview="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/business_list"
+        android:id="@id/content_pane"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -31,7 +31,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:indeterminate="true" />
+        android:indeterminate="true"
+        android:visibility="invisible" />
 
     <TextView
         android:id="@id/retry_button"
