--- a/presentation-android-mvp/src/main/res/values/colors.xml
+++ b/presentation-android-mvp/src/main/res/values/colors.xml
@@ -16,20 +16,7 @@
   -->
 
 <resources>
-    <string name="app_name">Business Search MVP</string>
-
-    <!-- literals -->
-    <string name="click_to_retry">Click to retry</string>
-    <string name="closed">Closed</string>
-    <string name="list_view">List View</string>
-    <string name="map_view">Map View</string>
-    <string name="open">Open</string>
-    <string name="search">Search</string>
-    <string name="use_current_location">Use current location</string>
-
-    <!-- hints -->
-    <string name="hint_location">Address city state, and/or zip</string>
-
-    <!-- errors -->
-    <string name="error_generic">Something went wrong</string>
+    <!-- Business List Item -->
+    <color name="business_list_item_open">@android:color/white</color>
+    <color name="business_list_item_closed">@android:color/darker_gray</color>
 </resources>
