--- a/presentation-android-mvp/src/main/res/layout/business_search_options_fragment.xml
+++ b/presentation-android-mvp/src/main/res/layout/business_search_options_fragment.xml
@@ -19,6 +19,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!-- TODO (IMPLEMENTATION) - Handle a ime action properly -->
     <EditText
         android:id="@+id/location_field"
         android:layout_width="wrap_content"
@@ -26,8 +27,8 @@
         android:layout_alignParentStart="true"
         android:layout_toStartOf="@+id/search_around_location"
         android:hint="@string/hint_location"
-        android:maxLines="1"
-        android:inputType="textPostalAddress"/>
+        android:inputType="textPostalAddress"
+        android:maxLines="1" />
 
     <Button
         android:id="@+id/search_around_location"
@@ -50,11 +51,13 @@
             android:textOff="@string/list_view"
             android:textOn="@string/map_view" />
 
-        <Button
+        <Switch
             android:id="@+id/search_around_current_location"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/generic_margin"
+            android:layout_marginStart="@dimen/generic_margin"
             android:layout_weight="3"
-            android:text="@string/use_current_location" />
+            android:text="@string/current_location" />
     </LinearLayout>
 </RelativeLayout>
