Handling ime action search

--- a/presentation-android-mvp/src/main/res/layout/business_search_options_fragment.xml
+++ b/presentation-android-mvp/src/main/res/layout/business_search_options_fragment.xml
@@ -17,9 +17,12 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:focusableInTouchMode="true">
 
-    <!-- TODO (IMPLEMENTATION) - Handle a ime action properly -->
+    <!-- focusableInTouchMode of parent is true to prevent child elements from receiving focus
+    initially, which shows the soft keyboard -->
+
     <EditText
         android:id="@+id/location_input"
         android:layout_width="wrap_content"
@@ -27,6 +30,7 @@
         android:layout_alignParentStart="true"
         android:layout_toStartOf="@+id/search_around_location"
         android:hint="@string/hint_location"
+        android:imeOptions="actionSearch"
         android:inputType="textPostalAddress"
         android:maxLines="1" />
 
