Added business image placeholder using Fresco

--- a/presentation-android-mvp/src/main/res/layout/business_list_item.xml
+++ b/presentation-android-mvp/src/main/res/layout/business_list_item.xml
@@ -36,12 +36,15 @@
         android:textAppearance="@android:style/TextAppearance.Material.SearchResult.Title"
         tools:text="Vandolf's Bakery" />
 
-    <!-- TODO (IMPLEMENTATION) - Replace with Fresco -->
-    <ImageView
+    <com.facebook.drawee.view.SimpleDraweeView xmlns:fresco="http://schemas.android.com/apk/res-auto"
         android:id="@+id/image"
         android:layout_width="@dimen/business_list_item_image_size"
         android:layout_height="@dimen/business_list_item_image_size"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        fresco:placeholderImage="@drawable/business_placeholder"
+        fresco:roundedCornerRadius="@dimen/business_list_item_image_corner_radius"
+        fresco:roundingBorderColor="@color/business_list_item_image_border"
+        fresco:roundingBorderWidth="@dimen/business_list_item_image_border_width" />
 
     <RatingBar
         android:id="@+id/rating"
