--- a/presentation-android-mvp/src/main/res/values/colors.xml
+++ b/presentation-android-mvp/src/main/res/values/colors.xml
@@ -19,4 +19,5 @@
     <!-- Business List Item -->
     <color name="business_list_item_open">@android:color/white</color>
     <color name="business_list_item_closed">@android:color/darker_gray</color>
+    <color name="business_list_item_image_border">@android:color/white</color>
 </resources>
