--- a/presentation-android-mvp/src/main/res/values/dimens.xml
+++ b/presentation-android-mvp/src/main/res/values/dimens.xml
@@ -23,9 +23,12 @@
     <dimen name="business_list_item_horizontal_padding">16dp</dimen>
     <dimen name="business_list_item_vertical_padding">8dp</dimen>
     <dimen name="business_list_item_margin">16dp</dimen>
-    <dimen name="business_list_item_name_text_size">18sp</dimen>
     <dimen name="business_list_item_rating_height">24dp</dimen>
     <dimen name="business_list_item_image_size">64dp</dimen>
     <dimen name="business_list_item_image_corner_radius">4dp</dimen>
     <dimen name="business_list_item_image_border_width">1dp</dimen>
+
+    <!-- Business Details -->
+    <dimen name="business_details_image_height">164dp</dimen>
+
 </resources>
