--- a/presentation-android-mvp/src/main/res/layout/business_list_item.xml
+++ b/presentation-android-mvp/src/main/res/layout/business_list_item.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright 2017 Vandolf Estrellado
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -48,34 +47,39 @@
         fresco:roundingBorderColor="@color/business_list_item_image_border"
         fresco:roundingBorderWidth="@dimen/business_list_item_image_border_width" />
 
+    <TextView
+        android:id="@+id/categories"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/name"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="@dimen/business_list_item_margin"
+        android:layout_marginEnd="@dimen/business_list_item_margin"
+        android:layout_toStartOf="@id/image"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:textAppearance="@android:style/TextAppearance.Material.SearchResult.Subtitle"
+        android:textSize="@dimen/business_list_item_categories_text_size"
+        tools:text="Bagels, Muffins, Cookies" />
+
     <RatingBar
         android:id="@+id/rating"
         style="@android:style/Widget.Material.RatingBar.Small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/image" />
+        android:layout_below="@id/categories"
+        android:layout_marginTop="@dimen/business_list_item_margin" />
 
     <TextView
         android:id="@+id/price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/image"
-        android:layout_marginEnd="@dimen/business_list_item_margin"
+        android:layout_alignBottom="@id/rating"
         android:layout_marginStart="@dimen/business_list_item_margin"
         android:layout_toEndOf="@id/rating"
-        android:layout_toStartOf="@+id/open_close"
         android:gravity="center_horizontal"
         android:textAppearance="@android:style/TextAppearance.Material.SearchResult.Subtitle"
+        android:textSize="@dimen/business_list_item_price_text_size"
         tools:text="$$$" />
-
-    <TextView
-        android:id="@+id/open_close"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/image"
-        android:layout_marginEnd="@dimen/business_list_item_margin"
-        android:layout_toStartOf="@id/image"
-        android:textAppearance="@android:style/TextAppearance.Material.SearchResult.Subtitle"
-        tools:text="Open" />
 
 </RelativeLayout>
