--- a/presentation-android-mvp/src/main/res/layout/business_details_fragment.xml
+++ b/presentation-android-mvp/src/main/res/layout/business_details_fragment.xml
@@ -23,6 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <!-- TODO (IMPLEMENTATION) - replace with viewpager showing photos -->
         <com.facebook.drawee.view.SimpleDraweeView xmlns:fresco="http://schemas.android.com/apk/res-auto"
             android:id="@+id/image"
             android:layout_width="match_parent"
@@ -33,7 +34,7 @@
 
         <!-- TODO (IMPLEMENTATION) - business_list_fragment.xml -->
         <!-- Contact: name, phone number, url, location -->
-        <!-- Open/close: open/close -->
+        <!-- Hours: hours, open/close -->
         <!-- Transaction types: transactionTypes -->
         <!-- Price: price -->
         <!-- Categories types: transactionTypes -->
